--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 .mypy_cache/*
 .git/*
 src/__pycache__/*
+src/get_song_sudacode.egg-info/*
+.pytest_cache/*
 __pycache__/*
+tests/.mypy_cache/*
+tests/__pycache__/*
+env/*
