--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.5.6
+attrs==20.3.0
 bleach==3.3.0
 certifi==2020.12.5
 cffi==1.14.5
@@ -7,22 +8,29 @@ colorama==0.4.4
 cryptography==3.4.7
 docutils==0.17.1
 fancycompleter==0.9.1
+-e git+git@github.com:ksyasuda/get-song.git@9faec3322b9217bb608e42d625faab902ef6fdeb#egg=get_song_sudacode
 idna==2.10
 importlib-metadata==4.0.1
+iniconfig==1.1.1
 isort==5.8.0
 jeepney==0.6.0
 keyring==23.0.1
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
+mypy==0.812
+mypy-extensions==0.4.3
 packaging==20.9
 pdbpp==0.10.2
 pep8==1.7.1
 pkginfo==1.7.0
+pluggy==0.13.1
+py==1.10.0
 pycparser==2.20
 Pygments==2.8.1
 pylint==2.8.2
 pyparsing==2.4.7
 pyrepl==0.9.0
+pytest==6.2.3
 readme-renderer==29.0
 requests==2.25.1
 requests-toolbelt==0.9.1
@@ -32,6 +40,8 @@ six==1.15.0
 toml==0.10.2
 tqdm==4.60.0
 twine==3.4.1
+typed-ast==1.4.3
+typing-extensions==3.7.4.3
 urllib3==1.26.4
 webencodings==0.5.1
 wmctrl==0.4
